test/programs/good/check-terms-precedence/term_application_followed_by_case.lq
fun :: Bit
fun = term (case x of a1 -> a2; b1 -> b2);

